Optimization for big library

--- a/localizations/eng.xml
+++ b/localizations/eng.xml
@@ -26,6 +26,8 @@
     
     <!--Tray menu-->
     <TrayMenuButtonClose>Close</TrayMenuButtonClose>
+
+    <Page>Page</Page>
     
     <!--Info about localization autor-->
     <LocalizationAuthor>GinoxXP</LocalizationAuthor>
